# btor2vis

./: CLAUDE.md  pyproject.toml
aiger2vis/: README.md  pyproject.toml
aiger2vis/examples/: c42_USP_7x9_noX.aag  c42_USP_7x9_noX.aig
aiger2vis/src/aiger2vis/: __main__.py  graph.py  parser.py  template.html  visualize.py
examples/: alu_with_constraints.btor2  count2.btor2  twocount2.btor2
src/btor2vis/: __main__.py  graph.py  parser.py  template.html  visualize.py
src/btor2vis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
